@@ -1,10 +1,10 @@
 # Copyright 1999-2015 Gentoo Foundation.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/default/linux/uclibc/mips/package.mask,v 1.4 2015/03/28 23:21:26 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/default/linux/uclibc/mips/package.mask,v 1.5 2015/03/29 00:32:37 blueness Exp $
 
 #
 # See bug #544756.
->=gcc-4.9
+>=sys-devel/gcc-4.9
 
 #
 # Broken packages
